--- a/style.css
+++ b/style.css
@@ -257,3 +257,95 @@ nav .search-icon{
     display: none;
     
 }
+
+/* Product Slider */
+
+
+.slider-container{
+  position: relative;
+  padding: auto;
+  overflow: hidden;
+}
+
+
+.product-card{
+    
+  display: flex;
+  width: 100%;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+}
+
+.image{
+  min-width: 300px;
+  max-width: 300px;
+  height: 400px;
+  background-color: rgba(255,255,255,0.5);
+  border:2px solid aqua;
+  margin: 10px;
+  color: black; 
+}
+
+/* .slider-wrap{
+  position: relative;
+  overflow: hidden;
+  height: 200px;
+
+}
+.product-slider-main{
+  position: absolute;
+  display: flex;
+  scroll-behavior: smooth;
+  
+
+}
+
+.product-item{
+  min-width: 300px;
+    max-width: 300px;
+  width: 400px;
+  
+  background-color: rgb(172, 63, 63);
+  position: relative;
+  height: 200px;
+  margin: 10px;
+}
+.text{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  font-size: 20px;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-weight: bold;
+} */
+
+/* Product slider cards */
+.slider_image{
+  height:280px;
+  width:280px;
+  margin: 10px;
+  border-radius: 10px;
+}
+.slider_title{
+  text-align: center;
+}
+.slider_price{
+  text-align: center;
+}
+.slider_button{
+  margin-left: 35%;
+  margin-top: 10px;
+  color: black;
+  background-color: #474c55;
+  width: 100px;
+  height: 30px;
+  border-radius: 10px;
+}
+.product_title{
+  margin-top: 50px;
+  margin-bottom: 50px;
+  text-align: center;
+  font-size: 32px;
+  font-weight: bold;
+}
